--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ figcaption {
 }
 
 .all {
+  background-color: #e3f2fd;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -34,10 +35,12 @@ figcaption {
 }
 
 .cat-box {
-  width: 50%;
+  width: 80%;
   padding: 3%;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .main_image {
@@ -48,9 +51,24 @@ figcaption {
 }
 
 .name-text {
-  justify-content: center;
+  width: 100%;
+}
+
+.cat-selection {
+  text-align: center;
+  flex-direction: column;
+  width: 20%;
+  background-color: #bbdefb;
+  padding: 3%;
+}
+
+.top-bottom-border {
   width: 100%;
   text-align: center;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-bottom: 3px solid #7d97ad;
+  border-top: 3px solid #7d97ad;
 }
 
 @media screen and (max-width: 850px) and (min-width: 551px) {}
